# freqs-vis

./: README.md  default.nix  flake.nix  pyproject.toml  setup.py  shell.nix
src/: audio_analyzer.py  main.py
