[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freqs-vis"
version = "1.0.0"
description = "Audio frequencies visualization tool"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "librosa",
    "matplotlib",
    "seaborn",
]

[project.scripts]
freqs-vis = "src.main:main"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}
